@@ -3,7 +3,8 @@
     01.RsfApiBinder 新增 converToProvider 方法方便 RSF 服务注册到 Hasor。这样 Hasor 就可以依赖注入一个 RSF 服务。
     02.RsfPublisher 接口可以通过 AppContext 直接拿到了，不需要通过 RsContext 接口间接获取。极大的方便了服务注册。
     03.RsfUpdater 接口可以查询服务的提供者地址列表。
-    04.新增Telent命令， info 用来查看服务器配置信息、detail 用来查看服务的详细信息。
+    04.新增 Telent命令， info 用来查看服务器配置信息、detail 用来查看服务的详细信息。
+    05.新增 RSF_GATEWAY_IP、RSF_GATEWAY_PORT 两个参数配置，通过配置该参数将允许 RSF 通过端口映射工作在内网环境中。
 * 改进:
     01.telnet 的交互信息可以被单独打印到一个日志文件中，另外 telnet 的输出日志更详细了。
     02.RsfCenter 的 client 部分进行重构优化，服务数据和RSF公用一套。降低了设计复杂度，减少了实现代码。
